--- a/Hotel.ATR1.RealPortal/Resources/Views/Shared/TopMenu.en-US.resx
+++ b/Hotel.ATR1.RealPortal/Resources/Views/Shared/TopMenu.en-US.resx
@@ -120,4 +120,7 @@
   <data name="Home" xml:space="preserve">
     <value>HOME</value>
   </data>
+  <data name="Rooms" xml:space="preserve">
+    <value>ROOMS</value>
+  </data>
 </root>
