--- a/Hotel.ATR1.RealPortal/Resources/Views/Shared/TopMenu.kk-KZ.resx
+++ b/Hotel.ATR1.RealPortal/Resources/Views/Shared/TopMenu.kk-KZ.resx
@@ -120,4 +120,7 @@
   <data name="Home" xml:space="preserve">
     <value>БАСТЫ БЕТ</value>
   </data>
+  <data name="Rooms" xml:space="preserve">
+    <value>БОЛМЕ</value>
+  </data>
 </root>
